app/feedreader_gui/static/css/main.css
/* BOF panes.css */

/* Generic pane rules */
body { margin: 0; -webkit-text-size-adjust: 100%; }
.page { left: 0; right: 0; top: 0; bottom: 0; }
.row, .col, .page { overflow: hidden; position: absolute; }
.row { left: 0; right: 0; }
.col { top: 0; bottom: 0; }
.scroll-x { overflow-x: auto; -webkit-overflow-scrolling: touch; }
.scroll-y { overflow-y: auto; -webkit-overflow-scrolling: touch; }
.fill, .pane { position: absolute; left: 0; top: 0; right: 0; bottom: 0; width: 100%; height: 100% }
.pane { display: none; }

/* Workaround: in landscape mode, IEMobile makes bottom toolbar overlap the page, so shorten the page by 75px to compensate */
.iemobile .page { bottom: -6px; }
@media screen and (orientation:landscape) { .iemobile .page { bottom: 75px; } }

/* EOF panes.css */

/* Pane configuration */
.left.col { left: 5px; width: 250px; top: 5px }
.right.col { left: 260px; right: 5px; top: 5px; }
.content_header.row { padding-bottom: .5em; position: relative; }
.content.row { top: 40px; bottom: 0; }
.footer.row { bottom: 0;  }

.content_header.row { border-bottom: 1px solid gray; }

#version {
	padding: 1em;
	font-size: .75em;
	font-color: #666;
}

body
{
	font-family: Verdana, Arial, sans-serif;
	font-size: 12px;
}

.ui-widget-table
{
	border-collapse: collapse;
}

.ui-widget-table td, .ui-widget-table th
{
	border: 1px solid #eee;
	padding: .6em 10px;
}
.ui-widget-table.black-border td, .ui-widget-table.black-border th
{
	border-color: #111;
}

.ui-form label, .ui-form input, .ui-form select
{
	display: block;
	padding: 1px 3px;
}
.ui-form fieldset
{
	border: 0;
	padding: 0;
}

.button { margin-bottom: 1em; }

#result
{
	display: none;
	position:fixed;
	bottom:0;
	right:0;
	z-index:100;
	margin: 1.5em;
} 
#result_container
{
	padding: 0 .7em;
}
#result_icon
{
	float:left;
	margin-right:.3em;
}
   
ul.clean 
{
	list-style-type: none;
	margin: 0;
	padding: 0;
}
ul.clean li
{
	display: block;
	text-align: left;
	margin-bottom: 1em;
}

#header
{
	padding-left: 10px;
}
#header h1
{
	margin: 0;
}

#spinner
{
	display: none;
	margin: 0;
	padding: 0;
	vertical-align: middle;
}

/* navigation */

#navigation .button .ui-button-text
{
	line-height: 1;
}

#navigation .options
{
	display: none;
}

#outlines
{
	/*border: 1px solid red; /**/
	list-style: none;
	padding-left: 0;
}
#outlines > li
{
	/*border: 1px solid green; /**/
}

#outlines ul
{
	/*border: 1px solid pink; /**/
	list-style: none;
	margin-left: 20px;
	padding-left: 0em;
}

#outlines ul > li
{
	/*border: 1px solid blue;*/
}

#outlines .outline-line
{
	background-image: url('../images/icons/silk/feed.png');
	background-repeat: no-repeat;
	background-size: 16px 16px;
	padding-left: 20px;
	margin-bottom: .5em;
	vertical-align: center;
}

#outlines .outline-text
{
	height: 16px;
	line-height: 16px;
	display: inline-block;
	overflow: hidden;
	max-width: 125px;
	text-overflow: ellipsis;
	white-space: nowrap;
}

#outlines .outline.has-unread > .outline-line > .outline-text
{
	font-weight: bold;
}

#outlines.show-only-unread .outline > .outline-line { display: none; }
#outlines.show-only-unread .outline.has-unread > .outline-line { display: block; }

#outlines .outline-unread-count
{
	font-size: 0.8em;
	color: #666;
	display: inline-block;
	padding: 0 0 0 4px;
	margin-right: 16px;
}

#outlines li.folder > .outline-line
{
	background-image: url( '../images/icons/silk/folder.png' );
}
#outlines li.folder-closed > .outline-line
{
	background-image: url( '../images/icons/silk/folder_feed.png' );
}
#outlines li.folder-closed > ul
{
	display: none;
}

#outlines a, #outlines a:active, #outlines a:hover, #outlines a:visited
{
	color: #333;
	text-decoration: none;
}


/* end navigation */

#content { outline: none; }

#posts
{
}

#load_more_posts { display: none; }
#no_more_posts { display: none; }

.post
{
	border: 1px solid lightgray;
	margin-bottom: 1em;
}

.post.current { border-left-color: blue; }

.post .body
{
	padding: .5em;
}

.post .link
{
	font-size: 1.5em;
	float: left;
}
.post .link a { text-decoration: none; color: black; font-weight: bold; }
.post.current .link a { color: blue; }

.post .pubDate
{
	float: right;
}

.post .source
{
	float: none;
	clear: both;
}

.post .authorName
{
	font-style: italic;
}

.post .content
{
	/*background-color: #ddd;*/
	overflow: auto;
}

.post .footer
{
	border-top: 1px solid lightgray;
	background-color: #e0e0e0;
	padding: .5em;
}

body.fullscreen #header { display: none; }
body.fullscreen #navigation { display: none; }
body.fullscreen #body { left: 5px; }

/* debug mode */
body.debug #body
{
	right: 25%;
}
#debug
{
	display: none;
}
body.debug #debug
{
	display: block;
	position: absolute;
	width: 25%;
	top: 0;
	bottom: 0;
	left: auto;
	right: 0;
}
body.debug #debug div
{
	border: 1px solid black;
	border-radius: 4px;
	padding: .5em;
	margin-bottom: .5em;
}

